--- a/.github/workflows/kerim.yml
+++ b/.github/workflows/kerim.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: kerim
 
 # Controls when the workflow will run
 on:
@@ -34,7 +34,7 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-name: CI
+name: kerim
 
 
 
